--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.8.1",
     "axios": "^0.24.0",
     "dotenv": "^12.0.3",
     "express": "^4.17.2",
