--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^0.24.0",
     "dotenv": "^12.0.3",
     "express": "^4.17.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.7",
+    "@types/socket.io": "^3.0.2",
     "prisma": "^3.8.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
